deployment/production/kubernetes/namespace.yaml

apiVersion: v1
kind: Namespace
metadata:
  name: enterprise-scanner
  labels:
    name: enterprise-scanner
    environment: production
